# GoIT_Web_homework_7

./: README.md  config.ini  my_select.py  pyproject.toml
conf/: db_conn.py  models.py
migrations/: env.py
migrations/versions/: 4ce3b5312040_init.py
seeds/: fill_tables.py
